# notifier

./: .env  Cargo.toml  README.md  movine.toml
migrations/2020-06-16-010024_create_notifications/: up.sql
src/: main.rs
src/notifications/: model.rs  routes.rs
