[package]
name = "notifier"
version = "0.1.0"
authors = ["Santiago Ocamica <santi6982@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.3.5", features = ['postgres', 'macros', 'chrono', 'uuid'] }
actix-web = "2.0.0"
actix-rt = "1.1.1"
dotenv = "0.15.0"
chrono = { version = "0.4.11", features = ['serde'] }
serde = { version = "1.0.112", features = ['derive'] }
serde_json = "1.0.55"
anyhow = "1.0.31"
futures = "0.3.5"
uuid = { version = "0.8.1", features = ['v4', 'serde'] }
pretty_env_logger = "0.4.0"
log = "0.4.8"
